# ID1214-project-RLE

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.extend.yml
docs/: ai-architecture-H.drawio  ai-architecture.drawio  model.drawio
scripts/: config.py  lightning_system.py  losses.py  train.py
scripts/callbacks/: image_reporter.py  loss_reporter.py  lr_reporter.py  metric_reporter.py
scripts/data/: batch_types.py  data_module.py  tokens.py  transforms.py
scripts/data/datasets/: dataset_base.py
scripts/data/datasets/panocontext/: dataset.py  processing.py  typings.py
scripts/data/datasets/zind/: dataset.py  processing.py  typings.py
scripts/metrics/: iou.py
scripts/model/: decoder.py  encoder.py  heads.py  model.py  token_embeddings.py
scripts/utils/: clearml_checkpoint_io.py  pano.py  pdraw.py
tools/: inference.py
