[project]
name = "room-layout-estimation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "torch==2.5.1",
    "numpy",
    "clearml",
    "torchvision",
    "lightning",
    "transformers",
    "opencv-python",
    "jaxtyping",
    "httpx>=0.28.1",
    "rich>=13.9.4",
    "orjson>=3.10.12",
    "tensorboardx>=2.6.2.2",
    "torchtune>=0.5.0",
    "torchao>=0.7.0",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "B", "C901", "I"]
typing-modules = ["typing", "jaxtyping"]
ignore = ["F722"]
task-tags = ["TODO", "FIXME", "XXX", "HACK", "STUPID"]
